--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Diego C. Bertolucci <bertolucci.diego.c@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.13",
